--- a/navbar.css
+++ b/navbar.css
@@ -34,7 +34,7 @@
    padding-right: 10px;
 }
 #navbarSupportedContent ul li a:hover{
-   color: rgb(219, 172, 172);
+   color: var(--seventh-color);
 }
 #menu_icon{
    margin-top: 12px;
