--- a/Contact.css
+++ b/Contact.css
@@ -129,3 +129,23 @@
 .tombol_kirim:active{
    opacity: 0.5;
 }
+
+
+@media (max-width: 800px) {
+   .modal_content{
+      display: flex;
+      flex-direction:column-reverse;
+      width: 90%;
+      height: 80%;
+   }
+
+   .contact_list{
+      width: 100%;
+   }
+
+   .contact{
+      width: 100%;
+      height: 90%;
+   }
+}
+
